Fixing the horizontal scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -7,5 +7,5 @@
 
 body {
     min-height: 100vh;
-    min-width: 100vw;
+    min-width: 100%;
 }
